--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/router": "^6.0.3",
     "@ngrx/effects": "^6.0.1",
     "@ngrx/store": "^6.0.1",
-    "@types/ol": "^4.6.2",
+    "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
     "ol": "^4.6.5",
     "rxjs": "^6.0.0",
@@ -37,6 +37,7 @@
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "@types/ol": "^4.6.2",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
