--- a/package.json
+++ b/package.json
@@ -20,9 +20,8 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
-    "@ngrx/effects": "^6.0.1",
-    "@ngrx/store": "^6.0.1",
     "bootstrap": "^4.1.1",
+    "cesium": "^1.46.1",
     "core-js": "^2.5.4",
     "ol": "^4.6.5",
     "rxjs": "^6.0.0",
