--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "imagery-implementation",
   "version": "0.0.0",
   "scripts": {
+    "predeploy": "npm run build:prod -- --base-href=https://ansyn.github.io/imagery-implementation/ --deploy-url=https://ansyn.github.io/imagery-implementation/",
+    "deploy": "gh-pages -d dist/imagery-implementation",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -20,6 +23,8 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@ansyn/core": "^0.2.8-1.1",
+    "@ansyn/imagery": "^0.2.8-1.1",
     "bootstrap": "^4.1.1",
     "cesium": "^1.46.1",
     "core-js": "^2.5.4",
@@ -38,6 +43,7 @@
     "@types/node": "~8.9.4",
     "@types/ol": "^4.6.2",
     "codelyzer": "~4.2.1",
+    "gh-pages": "^1.2.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
