--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "predeploy": "npm run build:prod -- --base-href=https://ansyn.github.io/imagery-implementation/ --deploy-url=https://ansyn.github.io/imagery-implementation/",
-    "deploy": "gh-pages -d dist/imagery-implementation",
+    "deploy": "gh-pages --repo https://$GITHUB_TOKEN@github.com/AnSyn/imagery-implementation.git -d build",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
