--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,6 @@ language: node_js
 node_js:
   - 'node'
 
-node_js:
-  - 'node'
-
 before_install:
   - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
 
@@ -25,6 +22,9 @@ before_script:
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
   #- apt-get install graphicsmagick # for e2e screenshots
+
+script:
+  - npm run test:single-run
 
 cache:
   directories:
