--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:prod": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "test:single-run": "ng test imagery-implementation --watch=false"
   },
   "private": true,
   "dependencies": {
