--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "imagery-implementation",
   "version": "0.0.0",
   "scripts": {
+    "link": "npm link ../ansyn/dist/ansyn/imagery ../ansyn/dist/ansyn/ol",
+    "unlink": "npm unlink @ansyn/imagery @ansyn/ol",
+    "postinstall": "npm run link",
     "predeploy": "npm run build:prod -- --base-href=https://ansyn.github.io/imagery-implementation/ --deploy-url=https://ansyn.github.io/imagery-implementation/",
     "deploy": "gh-pages -d dist/imagery-implementation",
     "ng": "ng",
@@ -14,46 +17,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.3",
-    "@angular/common": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
-    "@angular/core": "^6.0.3",
-    "@angular/forms": "^6.0.3",
-    "@angular/http": "^6.0.3",
-    "@angular/platform-browser": "^6.0.3",
-    "@angular/platform-browser-dynamic": "^6.0.3",
-    "@angular/router": "^6.0.3",
-    "@ansyn/core": "^0.2.8-1.1",
-    "@ansyn/imagery": "^0.2.8-1.2",
-    "bootstrap": "^4.1.1",
-    "cesium": "^1.46.1",
+    "@angular/animations": "^7.2.2",
+    "@angular/cdk": "^7.3.7",
+    "@angular/common": "^7.2.2",
+    "@angular/compiler": "^7.2.2",
+    "@angular/core": "^7.2.2",
+    "@angular/forms": "^7.2.2",
+    "@angular/http": "^7.2.2",
+    "@angular/material": "^7.3.7",
+    "@angular/platform-browser": "^7.2.2",
+    "@angular/platform-browser-dynamic": "^7.2.2",
+    "@angular/router": "^7.2.2",
+    "angular2-uuid": "^1.1.1",
     "core-js": "^2.5.4",
-    "ol": "^4.6.5",
-    "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26"
+    "rxjs": "^6.4.0",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/cli": "~6.0.8",
-    "@angular/compiler-cli": "^6.0.3",
-    "@angular/language-service": "^6.0.3",
-    "@types/geojson": "^7946.0.4",
+    "@angular-devkit/build-angular": "^0.13.6",
+    "@angular/cli": "~7.2.3",
+    "@angular/compiler-cli": "^7.2.10",
+    "@angular/language-service": "^7.2.2",
+    "@types/geojson": "7946.0.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "@types/ol": "^4.6.2",
     "codelyzer": "~4.2.1",
-    "gh-pages": "^1.2.0",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.0",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.3.0",
+    "jasmine-core": "^3.3.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^4.0.1",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "^2.0.4",
+    "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "protractor": "^5.4.1",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "typescript": "~3.2.4",
+    "gh-pages": "^1.2.0"
   }
 }
