--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
-    "angular2-uuid": "^1.1.1",
     "core-js": "^2.5.4",
+    "material-community-components": "^3.4.0",
     "rxjs": "^6.4.0",
     "zone.js": "^0.8.29"
   },
