--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "link": "npm link ../ansyn/dist/ansyn/imagery ../ansyn/dist/ansyn/ol",
-    "unlink": "npm unlink @ansyn/imagery @ansyn/ol",
+    "unlink": "npm unlink --no-save @ansyn/imagery @ansyn/ol",
     "predeploy": "npm run build:prod -- --base-href=https://ansyn.github.io/imagery-implementation/ --deploy-url=https://ansyn.github.io/imagery-implementation/",
     "deploy": "gh-pages --repo https://$GITHUB_TOKEN@github.com/AnSyn/imagery-implementation.git -d dist/imagery-implementation",
     "ng": "ng",
@@ -28,8 +28,8 @@
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
-    "@ansyn/imagery": "^0.3.29",
-    "@ansyn/ol": "^0.3.29",
+    "@ansyn/imagery": "^0.3.31",
+    "@ansyn/ol": "^0.3.31",
     "core-js": "^2.5.4",
     "material-community-components": "^3.4.0",
     "rxjs": "^6.4.0",
